Added Flexbox Functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>05-lab</title>
+  <title>07-lab</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,12 +11,102 @@
     <h1>Simple card-style animation</h1>
   </header>
   <main>
-    <figure>
-      <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
-      <figcaption>
-        A caption with more details about the image, in this case up to three lines but no more
-      </figcaption>
-    </figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
+	<figure>
+	  <img src="https://lorempixel.com/200/300/" alt"placeholder"/>
+	  <figcaption>
+		<p>
+			A caption with more details about the image, in this case up to three lines but no more
+			<br><br>
+			<button>
+				View Project...
+			</button>
+		</p>
+	  </figcaption>
+	</figure>
   </main>
 </body>
 </html>
